--- a/index after login.html
+++ b/index after login.html
@@ -98,8 +98,8 @@
 
         <div class="container-floid container-fluid">
 
-            <a class="navbar-brand link-logo-new" href="index.html"><img src="img/us logn-new.PNG" class="vector-img-logo"
-                alt="Vector"></a>
+            <a class="navbar-brand link-logo-new" href="index.html"><img src="img/us logn-new.PNG"
+                    class="vector-img-logo" alt="Vector"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -214,7 +214,8 @@
 
     <section class="section-image-top-position mt-3">
 
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
+            data-bs-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active width-height-img-slider-top">
                     <img src="img/featured-avatar.jpeg" class="img-fluid" alt="...">
@@ -240,6 +241,7 @@
                     </div>
 
                 </div>
+
                 <div class="carousel-item width-height-img-slider-top">
                     <img src="img/featured-avatar-click.jpg" class="img-fluid" alt="...">
 
@@ -264,6 +266,7 @@
                     </div>
 
                 </div>
+
                 <div class="carousel-item width-height-img-slider-top">
                     <img src="img/featured-avatar5.jpeg" class="img-fluid width-priveat" a lt="...">
 
@@ -287,14 +290,15 @@
                     </div>
 
                 </div>
+
             </div>
-            <button class="carousel-control-prev bg-dark text-white prev-slider " type="button" 
-            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+            <button class="carousel-control-prev bg-dark text-white prev-slider " type="button"
+                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next bg-dark text-white next-slider " type="button" 
-            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+            <button class="carousel-control-next bg-dark text-white next-slider " type="button"
+                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -407,8 +411,8 @@
     </section>
     <!-- section CarCarry /-->
 
-     <!-- section CLIENTS -->
-     <section class="CLIENTS">
+    <!-- section CLIENTS -->
+    <section class="CLIENTS">
         <div class="displayCLIENTS">
 
             <div class="Client1-carry">
@@ -420,7 +424,7 @@
 
                 <div class="carousel-inner">
 
-                    <div class="carousel-item active" >
+                    <div class="carousel-item active">
 
                         <i class="fa-regular fa-user slider-top "></i>
 
@@ -453,7 +457,7 @@
 
                     </div>
 
-                    <div class="carousel-item" >
+                    <div class="carousel-item">
 
                         <i class="fa-regular fa-user slider-top " style="color: #99dbf5;"></i>
 
@@ -587,14 +591,14 @@
 
                 </div>
 
-                <button class="carousel-control-prev priveat-enmatain-prev" type="button" 
-                data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <button class="carousel-control-prev priveat-enmatain-prev" type="button"
+                    data-bs-target="#carouselExampleDark" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
 
-                <button class="carousel-control-next priveat-enmatain-next" type="button" 
-                data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <button class="carousel-control-next priveat-enmatain-next" type="button"
+                    data-bs-target="#carouselExampleDark" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -801,7 +805,7 @@
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <span class="day-car">$35/day</span>
-                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                         </div>
 
                         <div class="rentals-car2">
@@ -832,7 +836,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                             <span class="day-car">$25/day</span>
                         </div>
 
@@ -866,7 +870,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury"></i></div>
                             <span class="day-car">$35/day</span>
                         </div>
 
@@ -1057,7 +1061,7 @@
     <!-- section Looking-for-ride -->
 
     <!-- section this-brand-car-web carousel-->
-    <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
 
         <div class="carousel-indicators">
 
@@ -1085,66 +1089,73 @@
         </div>
 
         <div class="carousel-inner">
+            <!--  class="img-fluid clickForHover"-->
+            <div class="carousel-item active text-center" data-bs-interval="10000">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeOne">Coding is </h1>
+                    <img src="img/brand-1.jpeg" id="buttonOne" alt="" class="img-fluid clickForHover">
+                </a>
+            </div>
 
-            <div class="carousel-item active text-center ">
-                <a href="#" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars one: This brand is available with us</span>
-                <img src="img/brand-1.jpeg" class="img-fluid clickForHover">
-            </a>
-            </div>
-            <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars tow: This brand is available with us</span>
-                <img src="img/brand-2.png" class="img-fluid clickForHover">
+            <div class="carousel-item text-center " data-bs-interval="2000">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeTow">Coding is </h1>
+                    <img src="img/brand-2.png" id="buttonTow" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
             <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars three: This brand is available with us</span>
-                <img src="img/brand-3.jpeg" class="img-fluid clickForHover">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeThree">Coding is </h1>
+                    <img src="img/brand-3.jpeg" id="buttonThree" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
             <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars four: This brand is available with us</span>
-                <img src="img/brand-5.jpeg" class="img-fluid clickForHover">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeFour">Coding is </h1>
+                    <img src="img/brand-5.jpeg" id="buttonFour" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
             <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars five: This brand is available with us</span>
-                <img src="img/brand-6.jpeg" class="img-fluid clickForHover">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeFive">Coding is </h1>
+                    <img src="img/brand-6.jpeg" id="buttonFive" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
             <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars sex: This brand is available with us</span>
-                <img src="img/brand-7.jpeg"class="img-fluid clickForHover">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeSex">Coding is </h1>
+                    <img src=img/brand-7.jpeg" id="buttonSex" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
             <div class="carousel-item text-center  ">
-                <a href="?" class="clickorstop" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="tooltip-slider-hover">models cars seven: This brand is available with us</span>
-                <img src="img/brand-8.jpeg" class="img-fluid clickForHover">
+                <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <h1 id="typeEight">Coding is </h1>
+                    <img src="img/brand-8.jpeg" id="buttonEight" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
+
         </div>
 
         <button class="carousel-control-prev bg-dark text-white priveat-carousel-prev" type="button"
-            data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
 
         <button class="carousel-control-next bg-dark text-white priveat-carousel-next" type="button"
-            data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            data-bs-target="#carouselExampleInterval" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
@@ -1329,7 +1340,54 @@
         }
     </script>
 
+    <script>
+        // قم بتعريف مصفوفة من النصوص والمتغيرات المرتبطة بها
+        var data = [
+            { text: 'Hello from Elzero Web School This is models cars one', variable: 'text', id: 'typeOne' },
+            { text: 'Hello from Elzero Web School This is models cars tow', variable: 'textOne', id: 'typeTow' },
+            { text: 'Hello from Elzero Web School This is models cars three', variable: 'textTow', id: 'typeThree' },
+            { text: 'Hello from Elzero Web School This is models cars four', variable: 'textThree', id: 'typeFour' },
+            { text: 'Hello from Elzero Web School This is models cars five', variable: 'textFour', id: 'typeFive' },
+            { text: 'Hello from Elzero Web School This is models cars sex', variable: 'textFive', id: 'typeSex' },
+            { text: 'Hello from Elzero Web School This is models cars seven', variable: 'textSex', id: 'typeEight' },
+        ];
 
+        // قم بتعريف دالة لتنفيذ الكتابة
+        function startTypewriter(button, text, variable, id) {
+            var buttonElement = document.getElementById(button);
+
+            buttonElement.onmouseover = function () {
+                'use strict';
+                var textIndex = 0;
+                var typeWriter = setInterval(function () {
+                    document.getElementById(id).textContent += text[textIndex];
+                    textIndex = textIndex + 1;
+
+                    if (textIndex > text.length - 1) {
+                        clearInterval(typeWriter);
+                        // إضافة تأخير قبل مسح النص
+                        setTimeout(function () {
+                            document.getElementById(id).textContent = ''; // مسح النص بعد انتهاء الكتابة
+                        }, 1000); // قم بتعيين الوقت الذي تريده هنا بالمللي ثانية
+                    }
+
+                }, 100);
+            };
+            function haltFunction() {
+                clearInterval(typeWriter);
+            }
+        }
+
+
+        // استدعاء الدالة لكل زر
+        startTypewriter('buttonOne', data[0].text, data[0].variable, data[0].id);
+        startTypewriter('buttonTow', data[1].text, data[1].variable, data[1].id);
+        startTypewriter('buttonThree', data[2].text, data[2].variable, data[2].id);
+        startTypewriter('buttonFour', data[3].text, data[3].variable, data[3].id);
+        startTypewriter('buttonFive', data[4].text, data[4].variable, data[4].id);
+        startTypewriter('buttonSex', data[5].text, data[5].variable, data[5].id);
+        startTypewriter('buttonEight', data[6].text, data[6].variable, data[6].id);
+    </script>
 
     <script src="js/java.js"></script>
 
