--- a/profile-driver.html
+++ b/profile-driver.html
@@ -59,12 +59,12 @@
 
     </div>
 
-    <nav class="navbar bg-info text-dark navbar-expand-lg  sticky-top">
+    <nav class="navbar text-dark navbar-expand-lg  sticky-top">
 
         <div class="container-floid container-fluid">
 
-            <a class="navbar-brand" href="index.html"><img src="img/Vector.png" class="vector-img-logo"
-                    alt="Vector"></a>
+            <a class="navbar-brand link-logo-new" href="index.html"><img src="img/us logn-new.PNG"
+                    class="vector-img-logo" alt="Vector"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -81,7 +81,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             home
                         </a>
@@ -187,7 +187,7 @@
                 <div class="img-background">
                     <img src="img/man-driving-car.avif" alt="img-background" class="img-me">
 
-                    <section id="Your-Words">
+                    <div id="Your-Words">
 
                         <div class="Your-word">
 
@@ -224,7 +224,7 @@
 
                         </div>
 
-                    </section>
+                    </div>
 
                     <section id="abutus">
 
